unpackaged/main/default/objects/iContactforSF__iContact_API_Connection__c/iContactforSF__iContact_API_Connection__c.object-meta.xml
<CustomObject>
    <customHelpPage>iContactforSF__iContactHelpConfiguration</customHelpPage>
    <description>Object that stores the iContact API Connection endpoint information.</description>
    <label>iContact Configurations</label>
    <nameField>
        <displayFormat>iContactConfig-{0}</displayFormat>
        <label>iContact Configuration Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>iContact Configurations</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>