unpackaged/main/default/objects/iContactforSF__iContact_API_Connection__c/fields/iContactforSF__Active__c.field-meta.xml
<CustomField>
    <fullName>iContactforSF__Active__c</fullName>
    <defaultValue>false</defaultValue>
    <description>If checked, this is the active API connection. Only one record should be marked active at any given time.</description>
    <inlineHelpText>If checked, this is the active API connection. Only one record should be marked active at any given time.</inlineHelpText>
    <label>Active</label>
    <type>Checkbox</type>
</CustomField>