unpackaged/main/default/objects/iContactforSF__iContact_API_Connection__c/fields/iContactforSF__API_Password__c.field-meta.xml
<CustomField>
    <fullName>iContactforSF__API_Password__c</fullName>
    <description>Deprecated. DO NOT USE</description>
    <inlineHelpText>The API Password to authenticate the username. iContact will supply you with this value.</inlineHelpText>
    <label>API Password (Deprecated)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>