unpackaged/main/default/objects/iContactforSF__iContact_API_Connection__c/fields/iContactforSF__API_Password_Encrypted__c.field-meta.xml
<CustomField>
    <fullName>iContactforSF__API_Password_Encrypted__c</fullName>
    <description>API Password for iContact</description>
    <label>API Password</label>
    <length>150</length>
    <maskChar>asterisk</maskChar>
    <maskType>all</maskType>
    <required>true</required>
    <type>EncryptedText</type>
</CustomField>