unpackaged/main/default/objects/iContactforSF__iContact_API_Connection__c/fields/iContactforSF__Campaign_ID__c.field-meta.xml
<CustomField>
    <fullName>iContactforSF__Campaign_ID__c</fullName>
    <description>The ID of the iContact campaign to send messages into.</description>
    <inlineHelpText>The ID of the iContact campaign to send messages into.</inlineHelpText>
    <label>Campaign ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>