unpackaged/main/default/objects/iContactforSF__iContact_API_Connection__c/fields/iContactforSF__Client_Folder_ID__c.field-meta.xml
<CustomField>
    <fullName>iContactforSF__Client_Folder_ID__c</fullName>
    <description>The iContact ID for the client folder you will be creating messages in. iContact will supply you with this value.</description>
    <inlineHelpText>The iContact ID for the client folder you will be creating messages in. iContact will supply you with this value.</inlineHelpText>
    <label>Client Folder ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>