unpackaged/main/default/objects/iContactforSF__iContact_API_Connection__c/fields/iContactforSF__Enable_Lite_Version__c.field-meta.xml
<CustomField>
    <fullName>iContactforSF__Enable_Lite_Version__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Enabling this option decreases the amount storage used by iContact for Salesforce. There will be no iContact message information stored at the contact and lead level. Targeted Sends is not available in this version.</description>
    <inlineHelpText>Enabling this option decreases the amount storage used by iContact for Salesforce. There will be no iContact message information stored at the contact and lead level. Targeted Sends is not available in this version.</inlineHelpText>
    <label>Enable Lite Version</label>
    <type>Checkbox</type>
</CustomField>