unpackaged/main/default/objects/iContactforSF__iContact_API_Connection__c/fields/iContactforSF__Endpoint_URL__c.field-meta.xml
<CustomField>
    <fullName>iContactforSF__Endpoint_URL__c</fullName>
    <description>iContact will supply this value.</description>
    <inlineHelpText>iContact will supply this value.</inlineHelpText>
    <label>Endpoint URL</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>