unpackaged/main/default/objects/iContactforSF__iContact_API_Connection__c/fields/iContactforSF__Spam_Check_Error_Message_Threshold__c.field-meta.xml
<CustomField>
    <fullName>iContactforSF__Spam_Check_Error_Message_Threshold__c</fullName>
    <defaultValue>3</defaultValue>
    <description>During the time of Send, if the message spam score is above this set threshold an error message will display requesting verification to continue.</description>
    <inlineHelpText>During the time of Send, if the message spam score is above this set threshold an error message will display requesting verification to continue.</inlineHelpText>
    <label>Spam Check Error Message Threshold</label>
    <precision>2</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>