unpackaged/main/default/objects/iContactforSF__iContact_API_Connection__c/fields/iContactforSF__updateContactLead__c.field-meta.xml
<CustomField>
    <fullName>iContactforSF__updateContactLead__c</fullName>
    <defaultValue>false</defaultValue>
    <description>If checked, iContact will update the Email Opt Out fields on the Contact and Lead records during an Update request.</description>
    <inlineHelpText>If checked, iContact will update the Email Opt Out fields on the Contact and Lead records during an Update request.</inlineHelpText>
    <label>Update Email Opt Out</label>
    <type>Checkbox</type>
</CustomField>