unpackaged/main/default/objects/iContactforSF__iContact_API_Connection__c/fields/iContactforSF__Version__c.field-meta.xml
<CustomField>
    <fullName>iContactforSF__Version__c</fullName>
    <description>Choosing "Lite" will prevent iContact from storing contact and lead email statistics to conserve Salesforce storage space.</description>
    <inlineHelpText>Choosing "Lite" will prevent iContact from storing contact and lead email statistics to conserve Salesforce storage space.</inlineHelpText>
    <label>Version</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Normal</fullName>
                <default>true</default>
                <label>Normal</label>
            </value>
            <value>
                <fullName>Lite</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>