unpackaged/main/default/objects/iContactforSF__iContact_API_Connection__c/fields/iContactforSF__View_Spam_Score__c.field-meta.xml
<CustomField>
    <fullName>iContactforSF__View_Spam_Score__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Checking this checkbox will display the Spam Check Score of a email template before it is sent out.</description>
    <inlineHelpText>Checking this checkbox will display the Spam Check Score of a email template before it is sent out.</inlineHelpText>
    <label>View Spam Score</label>
    <type>Checkbox</type>
</CustomField>