unpackaged/main/default/objects/iContactforSF__iContact_API_Connection__c/listViews/iContactforSF__All.listView-meta.xml
<ListView>
    <fullName>iContactforSF__All</fullName>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>